# HebloMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: AZURE_SETUP.md  CLAUDE_DESKTOP_OAUTH.md  DEPLOYMENT_CHECKLIST.md
docs/plans/: 2026-02-25-manufacture-endpoints-design.md  2026-02-25-manufacture-endpoints.md  2026-02-26-comprehensive-tool-tests-design.md  2026-02-26-comprehensive-tool-tests.md  2026-02-26-deployment-pipeline-design.md  2026-02-26-deployment-pipeline.md  2026-02-26-oauth-authentication-design.md  2026-02-26-oauth-authentication.md
scripts/: validate-deployment.sh
src/heblo_mcp/: __init__.py  __main__.py  auth.py  auth_mode.py  config.py  cors_middleware.py  health_middleware.py  oauth_endpoints.py  oauth_session.py  routes.py  server.py  spec.py  sse_auth.py  sse_bearer_auth.py  token_validator.py  user_context.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  jwt_fixtures.py
tests/integration/: __init__.py  test_api_errors.py  test_server.py  test_sse_auth_integration.py
tests/unit/: __init__.py  test_auth.py  test_auth_mode.py  test_cli_serve_sse.py  test_config.py  test_routes.py  test_server_health.py  test_spec.py  test_sse_auth.py  test_sse_bearer_auth.py  test_token_validator.py  test_user_context.py
